--- a/rithy.html
+++ b/rithy.html
@@ -9,5 +9,6 @@
     <div class="p">Testing</div>
     <div class="p"></div>
     <div class="p">d</div>
+    <div class="d"></div>
 </body>
 </html>
